--- a/msr-contact-management/k8s/int/deploy.yaml
+++ b/msr-contact-management/k8s/int/deploy.yaml
@@ -138,7 +138,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: "contact-management.sttlab.local"
+  - host: "contact-management-int.sttlab.local"
     http:
       paths:
       - pathType: Prefix
@@ -150,7 +150,7 @@ spec:
               number: 5555
   tls:
   - hosts: 
-    - contact-management.sttlab.local
+    - contact-management-int.sttlab.local
     secretName: tls-cert
 
 ---
