--- a/msr-contact-management/k8s/int/deploy.yaml
+++ b/msr-contact-management/k8s/int/deploy.yaml
@@ -115,6 +115,7 @@ metadata:
   labels:
     name: stt-contact-management
     app: stt-contact-management
+    product: msr
     monitoring: enabled
 spec:
   selector:
