Integration with Hashicorp Vault using an external secret

--- a/msr-contact-management/k8s/int/kustomization.yaml
+++ b/msr-contact-management/k8s/int/kustomization.yaml
@@ -1,5 +1,6 @@
 resources:
   - deploy.yaml
+  - externalSecret.yaml
   - workflow.yaml
 images:
   - name: ghcr.io/staillanibm/msr-contact-management
