--- a/msr-contact-management/k8s/int/deploy.yaml
+++ b/msr-contact-management/k8s/int/deploy.yaml
@@ -48,6 +48,7 @@ kind: Deployment
 metadata:
   labels:
     app: stt-contact-management
+    runtime: msr
   name: stt-contact-management
 spec:
   replicas: 2
