Label for Promtail

--- a/msr-contact-management/k8s/int/deploy.yaml
+++ b/msr-contact-management/k8s/int/deploy.yaml
@@ -64,6 +64,7 @@ spec:
     metadata:
       labels:
         app: stt-contact-management
+        app.kubernetes.io/name: microservicesruntime
     spec:
       imagePullSecrets:
         - name: regcred
