--- a/msr-contact-management/k8s/int/deploy.yaml
+++ b/msr-contact-management/k8s/int/deploy.yaml
@@ -175,23 +175,23 @@ spec:
     - contact-management-int.sttlab.local
     secretName: tls-cert
 
-# ---
+---
 
-# kind: HorizontalPodAutoscaler
-# apiVersion: autoscaling/v2
-# metadata:
-#   name: stt-contact-management
-# spec:
-#   scaleTargetRef:
-#     kind: Deployment
-#     name: stt-contact-management
-#     apiVersion: apps/v1
-#   minReplicas: 1
-#   maxReplicas: 3
-#   metrics:
-#     - type: Resource
-#       resource:
-#         name: cpu
-#         target:
-#           type: Utilization
-#           averageUtilization: 90
+kind: HorizontalPodAutoscaler
+apiVersion: autoscaling/v2
+metadata:
+  name: stt-contact-management
+spec:
+  scaleTargetRef:
+    kind: Deployment
+    name: stt-contact-management
+    apiVersion: apps/v1
+  minReplicas: 1
+  maxReplicas: 3
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 90
